Fix data entry view not fully showing on smaller mobile devices
Closes #79

--- a/app/src/assets/styles/views/fevermap-data-entry.scss
+++ b/app/src/assets/styles/views/fevermap-data-entry.scss
@@ -613,7 +613,7 @@ input[type="range"]::-webkit-slider-runnable-track {
 
   .fevermap-data-entry-content {
     min-height: 80vh;
-    padding: 0;
+    padding: 5vh 0;
   }
 
   .fevermap-entry-carousel {
